phase_1-commontrack/k8s/Day10/account-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: banking-account-deployment
  namespace: banking
spec:
  replicas: 2
  selector:
    matchLabels:
      app: account-service
  template:
    metadata:
      labels:
        app: account-service
    spec:
      containers:
        - name: account-service
          image: cazzzzz/banking-account-service:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3002
---
apiVersion: v1
kind: Service
metadata:
  name: banking-account-service
  namespace: banking
spec:
  selector:
    app: account-service
  ports:
    - port: 3002
      targetPort: 3002
  type: ClusterIP
