phase_1-commontrack/k8s/Day10/postgres.yaml
apiVersion: v1
kind: Service
metadata:
  name: banking-postgres-service
  namespace: banking
spec:
  selector:
    app: postgres
  ports:
    - port: 5432
      targetPort: 5432
  type: ClusterIP
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: banking-postgres-statefulset
  namespace: banking
spec:
  serviceName: "banking-postgres-service"
  replicas: 1
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
    spec:
      containers:
        - name: postgres
          image: postgres:15-alpine
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: postgres-data-volume
              mountPath: /var/lib/postgresql/data
            - name: postgres-init-volume
              mountPath: /docker-entrypoint-initdb.d
      volumes:
        - name: postgres-init-volume
          configMap:
            name: banking-postgres-init-config
  volumeClaimTemplates:
    - metadata:
        name: postgres-data-volume
      spec:
        accessModes: [ "ReadWriteOnce" ]
        resources:
          requests:
            storage: 5Gi
